Update Generator